fix notes sorting dropdown alignment

--- a/app/assets/stylesheets/notes-index.css
+++ b/app/assets/stylesheets/notes-index.css
@@ -65,6 +65,7 @@
 }
 
 .notes-idx-sub-header {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -75,4 +76,21 @@
 
 .notes-idx-sub-header img {
   width: 20px;
+}
+
+
+.notes-sorting-menu {
+  position: absolute;
+  display: flex; 
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  left: -170;
+  width: 140px;
+  height: 140px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 10px lightgray;
+  border-radius: 2px;
+  z-index: 22;
+  right: 20px;
 }
