--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 20px;
+  margin: 20px 15px;
   font-family: 'Didact Gothic', sans-serif;
   color: white;
   font-size: 16px;
